--- a/docs/translations/index.pot
+++ b/docs/translations/index.pot
@@ -1,14 +1,14 @@
-# OpenTabletop Documentation Translation Template.
+# Tabletop Club Documentation Translation Template.
 # Copyright (C) 2020-2021, Benjamin 'drwhut' Beddows
-# This file is distributed under the same license as the OpenTabletop package.
+# This file is distributed under the same license as the Tabletop Club package.
 # Benjamin 'drwhut' Beddows <drwhut@gmail.com>, 2021.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: OpenTabletop \n"
+"Project-Id-Version: Tabletop Club \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-07 01:27+0100\n"
+"POT-Creation-Date: 2021-05-03 20:23+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -27,15 +27,15 @@ msgid "Custom Assets"
 msgstr ""
 
 #: ../../index.rst:7
-msgid "OpenTabletop Documentation"
+msgid "Tabletop Club Documentation"
 msgstr ""
 
 #: ../../index.rst:9
-msgid "Welcome to the documentation for OpenTabletop, a free and open source tabletop board game simulator! If you're new to the project, feel free to check out the :ref:`about-open-tabletop` page. Otherwise, you can use either the table of contents, the sidebar, or the search bar to find what you need!"
+msgid "Welcome to the documentation for Tabletop Club, a free and open source tabletop board game simulator! If you're new to the project, feel free to check out the :ref:`about-tabletop-club` page. Otherwise, you can use either the table of contents, the sidebar, or the search bar to find what you need!"
 msgstr ""
 
 #: ../../index.rst:16
-msgid "The documentation, as well as the project in general, is open to suggestions and contributions! If you feel that something is not explained well, or you think that information is missing, then please don't hesitate to open an issue or a pull request on the project's `GitHub repository <https://github.com/drwhut/open-tabletop/issues>`_!"
+msgid "The documentation, as well as the project in general, is open to suggestions and contributions! If you feel that something is not explained well, or you think that information is missing, then please don't hesitate to open an issue or a pull request on the project's `GitHub repository <https://github.com/drwhut/tabletop-club/issues>`_!"
 msgstr ""
 
 #: ../../index.rst:40
