--- a/docs/translations/general.pot
+++ b/docs/translations/general.pot
@@ -1,6 +1,6 @@
 # Tabletop Club Documentation Translation Template.
-# Copyright (C) 2020-2021 Benjamin 'drwhut' Beddows.
-# Copyright (C) 2021 Tabletop Club contributors (see game/CREDITS.tres).
+# Copyright (c) 2020-2022 Benjamin 'drwhut' Beddows.
+# Copyright (c) 2021-2022 Tabletop Club contributors (see game/CREDITS.tres).
 # This file is distributed under the same license as the Tabletop Club package.
 # Benjamin 'drwhut' Beddows <drwhut@gmail.com>, 2021.
 #
