--- a/game/Translations/godot-l10n.pot
+++ b/game/Translations/godot-l10n.pot
@@ -1,6 +1,6 @@
 # Translations template for Tabletop Club.
-# Copyright (C) 2020-2021 Benjamin 'drwhut' Beddows.
-# Copyright (C) 2021 Tabletop Club contributors (see game/CREDITS.tres).
+# Copyright (c) 2020-2022 Benjamin 'drwhut' Beddows.
+# Copyright (c) 2021-2022 Tabletop Club contributors (see game/CREDITS.tres).
 # This file is distributed under the same license as the Tabletop Club project.
 # Benjamin 'drwhut' Beddows <drwhut@gmail.com>, 2022.
 #
