--- a/docs/translations/custom_assets.pot
+++ b/docs/translations/custom_assets.pot
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Tabletop Club \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-06 16:27+0000\n"
+"POT-Creation-Date: 2023-03-30 11:14+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -867,7 +867,7 @@ msgid "By the corner of the table is a large, metallic gramophone."
 msgstr ""
 
 #: ../../custom_assets/asset_packs/asset_types.rst:159
-msgid "Speakers are objects that can play audio tracks. They emit sound positionally, so the audio will vary depending on the position of the speaker relative to the camera."
+msgid "Speakers are objects that can play audio tracks. They can be configured to emit sound positionally, so the audio will vary depending on the position of the speaker relative to the camera."
 msgstr ""
 
 #: ../../custom_assets/asset_packs/asset_types.rst:167
@@ -1395,7 +1395,7 @@ msgid "We can tell the game what size the object should actually be by creating 
 msgstr ""
 
 #: ../../custom_assets/tutorials/add_cards_tokens.rst:119
-msgid "Cards are always the same thickness, so the second number in the ``scale`` property can just be ``1.0`` in this case."
+msgid "Cards are always the same thickness, so the ``scale`` for cards is always a ``Vector2`` containing two numbers, rather than a ``Vector3``."
 msgstr ""
 
 #: ../../custom_assets/tutorials/add_cards_tokens.rst:124
