--- a/docs/translations/general.pot
+++ b/docs/translations/general.pot
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Tabletop Club \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-17 17:29+0100\n"
+"POT-Creation-Date: 2023-04-18 14:35+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -158,7 +158,7 @@ msgid "Is there an official Discord or Matrix server that I can join?"
 msgstr ""
 
 #: ../../general/about.rst:127
-msgid "Yes, you can join the official `Discord <https://discord.gg/GqYkGV4WwX>`_ and `Matrix <https://matrix.to/#/!dbNhzKYPHpcgZgUkRi:matrix.org?via=matrix.org>`_ servers to chat with other players about anything from the game itself, to board games in general, or even to share asset packs that you have made!"
+msgid "Yes, you can join the official `Discord <https://discord.gg/GqYkGV4WwX>`_ and `Matrix <https://matrix.to/#/#tabletop-club:matrix.org>`_ servers to chat with other players about anything from the game itself, to board games in general, or even to share asset packs that you have made!"
 msgstr ""
 
 #: ../../general/about.rst:132
