--- a/assets/.translations/nl.po
+++ b/assets/.translations/nl.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Tabletop Club\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-03-20 15:31\n"
-"PO-Revision-Date: 2023-03-20 21:51+0000\n"
+"POT-Creation-Date: 2023-05-09 09:03\n"
+"PO-Revision-Date: 2023-05-10 19:51+0000\n"
 "Last-Translator: Heimen Stoffels <vistausss@fastmail.com>\n"
 "Language-Team: Dutch <https://hosted.weblate.org/projects/tabletop-club/"
 "default-asset-pack/nl/>\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.16.2-dev\n"
+"X-Generator: Weblate 4.18-dev\n"
 "Generated-By: extract_pot.py\n"
 
 #: ../TabletopClub/boards/Chess_Board:1
@@ -886,13 +886,18 @@ msgid ""
 "Welcome to the lobby of the FUTURE! Luxurious automatic ashtrays, and modern "
 "green vinyl furnishings set off the shag carpeted walls. Enjoy a Rusty Nail "
 "from our cheerful bar staff (with a complimentary cheese and fruit plate "
-"before 5pm). We feature prime rib dinners every day that ends in a "
+"before 5pm). We feature prime rib dinners every day that ends in a \"y\"! "
+"Remember to tip the bellhops at least 5 cents per bag. Enjoy your stay! This "
+"was written 2 years before it was published, because I didn't have a good "
+"enough upright bass sample to make it go."
 msgstr ""
 "Welkom in de lobby van de TOEKOMST! Luxueuze automatische asbakken en met "
-"vinyl beklede meubels in modern groen staan tegen het behang van de muren. "
-"Geniet van een glaasje whiskey aan onze bar (met een kaas- en fruitplankje "
-"vóór 5 uur 's middags!). Ook kun je genieten van spareribs op dagen die "
-"eindigen op "
+"vinyl beklede meubels in modern groen staan tegen het behang. Geniet van een "
+"glaasje whiskey aan onze bar (met een kaas- en fruitplankje vóór 5 uur 's "
+"middags!). Ook kun je genieten van spareribs op dagen die eindigen op een ‘g’"
+". Vergeet niet om de piccolo minimaal 5 cent per dag fooi te geven. Geniet "
+"van je verblijf! Dit is 2 jaar geleden geschreven, omdat ik onvoldoende "
+"voorbeeldlemma's had."
 
 #: ../TabletopClub/music/Night_on_the_Docks_-_Sax_-_Kevin_MacLeod:1
 msgid "Night on the Docks - Sax - Kevin MacLeod"
