--- a/docs/translations/zh_Hans/LC_MESSAGES/custom_assets.po
+++ b/docs/translations/zh_Hans/LC_MESSAGES/custom_assets.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: Tabletop Club\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-03-30 11:14+0100\n"
-"PO-Revision-Date: 2023-04-21 07:51+0000\n"
-"Last-Translator: Stony <stonyme@vip.qq.com>\n"
+"PO-Revision-Date: 2023-05-08 06:50+0000\n"
+"Last-Translator: Luoyu <rainluoyu@outlook.com>\n"
 "Language-Team: Chinese (Simplified) <https://hosted.weblate.org/projects/"
 "tabletop-club/docs-custom-assets/zh_Hans/>\n"
 "Language: zh_Hans\n"
@@ -22,11 +22,11 @@ msgstr ""
 
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:3
 msgid "Asset pack structure"
-msgstr ""
+msgstr "资源包结构"
 
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:6
 msgid "Locations for asset packs"
-msgstr ""
+msgstr "资源包位置"
 
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:8
 msgid "At the start of the game, Tabletop Club will scan a set of given folders for asset packs. If you want the game to import your asset pack, it needs to be put into one of the following locations:"
@@ -346,7 +346,7 @@ msgstr ""
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:169
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:192
 msgid "All"
-msgstr ""
+msgstr "全部"
 
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:139
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:141
@@ -368,7 +368,7 @@ msgstr ""
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:141
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:178
 msgid "Cards"
-msgstr ""
+msgstr "卡牌"
 
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:141
 msgid "The file name of the back face of the card. The texture must be in the same folder. If blank, no back face texture is applied."
@@ -389,7 +389,7 @@ msgstr ""
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:157
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:171
 msgid "Tables"
-msgstr ""
+msgstr "桌台"
 
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:143
 msgid "``0.5``"
@@ -429,7 +429,7 @@ msgstr ""
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:165
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:180
 msgid "Objects"
-msgstr ""
+msgstr "物件"
 
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:147
 msgid "``#ffffff``"
@@ -497,7 +497,7 @@ msgstr ""
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:155
 #: ../../custom_assets/asset_packs/asset_types.rst:97
 msgid "Dice"
-msgstr ""
+msgstr "骰子"
 
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:155
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:190
@@ -614,7 +614,7 @@ msgstr ""
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:173
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:185
 msgid "Skyboxes"
-msgstr ""
+msgstr "天空盒"
 
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:173
 msgid "``Vector3(0.0, 0.0, 0.0)``"
@@ -667,7 +667,7 @@ msgstr ""
 
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:183
 msgid "Containers"
-msgstr ""
+msgstr "容器"
 
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:183
 msgid "If ``true``, when the container is being shaken upside down, it will randomly drop items out."
@@ -707,7 +707,7 @@ msgstr ""
 
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:190
 msgid "Templates"
-msgstr ""
+msgstr "模板"
 
 #: ../../custom_assets/asset_packs/asset_pack_structure.rst:190
 msgid "Used to set up textboxes for image templates. See :ref:`asset-type-template` for more information."
@@ -851,7 +851,7 @@ msgstr ""
 
 #: ../../custom_assets/asset_packs/asset_types.rst:143
 msgid "Piece"
-msgstr "块"
+msgstr "物件"
 
 #: ../../custom_assets/asset_packs/asset_types.rst:None
 msgid "On the table are two chess pieces, a white pawn and a black queen."
@@ -863,7 +863,7 @@ msgstr ""
 
 #: ../../custom_assets/asset_packs/asset_types.rst:154
 msgid "Speaker"
-msgstr ""
+msgstr "音箱"
 
 #: ../../custom_assets/asset_packs/asset_types.rst:None
 msgid "By the corner of the table is a large, metallic gramophone."
@@ -875,7 +875,7 @@ msgstr ""
 
 #: ../../custom_assets/asset_packs/asset_types.rst:167
 msgid "Timer"
-msgstr ""
+msgstr "定时器"
 
 #: ../../custom_assets/asset_packs/asset_types.rst:169
 msgid "Timers are objects that can be used as countdowns, stopwatches, or to display the system time. If an audio track is loaded, it will automatically play when the countdown reaches 0."
@@ -883,7 +883,7 @@ msgstr ""
 
 #: ../../custom_assets/asset_packs/asset_types.rst:177
 msgid "Token"
-msgstr ""
+msgstr "小部件"
 
 #: ../../custom_assets/asset_packs/asset_types.rst:None
 msgid "On the table are some stacks of poker chips varying in height,\n"
@@ -904,7 +904,7 @@ msgstr ""
 
 #: ../../custom_assets/asset_packs/asset_types.rst:199
 msgid "Music"
-msgstr ""
+msgstr "音乐"
 
 #: ../../custom_assets/asset_packs/asset_types.rst:201
 msgid "Music tracks are the same as sounds, but they can also be configured to play in the main menu. See the ``main_menu`` property in :ref:`config-cfg`."
@@ -944,7 +944,7 @@ msgstr ""
 
 #: ../../custom_assets/asset_packs/asset_types.rst:246
 msgid "Table"
-msgstr ""
+msgstr "桌游桌"
 
 #: ../../custom_assets/asset_packs/asset_types.rst:248
 msgid "A table is a :ref:`file-type-3d` that is placed in the centre of the game world for players to put objects on."
